// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Medicament Container component(UI Integration) > should render the correct content for medicament container 1`] = `
<div>
  <div
    class="sc-FEMpB korYns  fr-container fr-pt-1w fr-pb-2w"
  >
    <div
      class="fr-grid-row fr-grid-row--gutters"
    >
      <div
        class="sc-gQJZgv caevfI fr-col-12 fr-mt-2w"
      >
        <div
          class="sc-gQJZgv caevfI mobile-display-contents fr-grid-row fr-grid-row--gutters"
        >
          <div
            class="sc-FEMpB korYns mobile-display-contents fr-col-12 fr-col-lg-3 fr-col-md-3"
          >
            <div
              class="sc-eiwqOE bTPPKc"
            >
              <div
                class="fr-share"
              >
                <p
                  class="fr-share__title"
                >
                  Partager via :
                </p>
                <ul
                  class="fr-btns-group"
                >
                  <li>
                    <a
                      class="fr-btn--mail fr-btn"
                      href="mailto:?subject=Vizamyl 400 Mbq/ml, solution injectable - Info Médicament&body=Voici un lien vers la page Vizamyl 400 Mbq/ml, solution injectable sur le site Info Médicament : http://localhost:3000/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Partager par email
                    </a>
                  </li>
                  <li>
                    <a
                      class="fr-btn--copy fr-btn"
                      href=""
                    >
                      Copier dans le presse-papier
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="sc-flQbIK gBVMLf fr-mb-4w fr-p-2w"
            >
              <div
                class="fr-toggle fr-toggle--label-left medicament-toggle-switch"
                id="fr-toggle-:r0:"
              >
                <input
                  aria-describedby="fr-toggle-:r0:-hint-text"
                  class="fr-toggle__input"
                  id="fr-toggle-:r0:-input"
                  title="Version détaillée"
                  type="checkbox"
                />
                <label
                  class="fr-toggle__label"
                  for="fr-toggle-:r0:-input"
                >
                  Version détaillée
                </label>
                <p
                  class="fr-hint-text"
                  id="fr-toggle-:r0:-hint-text"
                >
                  Afficher RCP, données HAS, CNAM...
                </p>
              </div>
            </div>
            <section
              class="mobile-display-contents fr-mb-4w"
            >
              <div
                class="sc-FEMpB lfcJZZ fr-mb-4w fr-p-2w"
              >
                <div>
                  <div
                    class="sc-gjcoXW ChmUM"
                  >
                    Sous-classe
                  </div>
                  <a
                    class="fr-tag--custom-alt-class fr-tag fr-tag--custom-alt-class"
                    href="/atc/V09"
                    id="fr-tag-:r2:"
                    target="_blank"
                  >
                    Produits de radiologie pour examen
                  </a>
                  <hr
                    class="fr-pb-1w fr-mt-1w"
                  />
                </div>
                <div>
                  <div
                    class="sc-gjcoXW ChmUM"
                  >
                    Substance active
                  </div>
                  <a
                    class="fr-tag--custom-alt-substance fr-tag fr-tag--custom-alt-substance"
                    href="/substances/31045"
                    id="fr-tag-:r3:"
                    target="_blank"
                  >
                    flutémétamol (18F)
                  </a>
                  <hr
                    class="fr-pb-1w fr-mt-1w"
                  />
                </div>
                <div>
                  <div>
                    <a
                      class="fr-tag--custom-alt-blue fr-tag fr-icon-capsule-fill fr-tag--icon-left fr-tag--custom-alt-blue"
                      href="/generiques/67652999"
                      id="fr-tag-:r5:"
                      target="_blank"
                    >
                      Voir les Princeps
                    </a>
                  </div>
                  <hr
                    class="fr-pb-1w fr-mt-1w"
                  />
                </div>
                <div>
                  <button
                    class="fr-tag--custom-alt-blue fr-tag fr-icon-file-text-fill fr-tag--icon-left"
                    id="fr-tag-:r4:"
                  >
                    Sur ordonnance
                  </button>
                </div>
              </div>
              <div
                class="sc-FEMpB lfcJZZ fr-mb-4w fr-p-2w"
              >
                <h3
                  class="fr-h6"
                >
                  <span
                    class="fr-hidden-md"
                  >
                    Conditionnement
                  </span>
                  <span
                    class="fr-hidden fr-unhidden-md"
                  >
                    Conditionnement et prix
                  </span>
                </h3>
                <ul
                  class="fr-raw-list"
                >
                  <li
                    class="fr-mb-1w"
                  >
                    <span
                      class="fr-icon--custom-box fr-mr-1w"
                    />
                    <b>
                      Flacon de 15 ml
                    </b>
                    <div>
                      Prix libre - non remboursable
                    </div>
                  </li>
                </ul>
              </div>
            </section>
          </div>
          <div
            class="sc-FEMpB korYns mobile-display-contents fr-col-12 fr-col-lg-9 fr-col-md-9"
          >
            <div
              class="sc-FEMpB lfcJZZ fr-mb-4w fr-p-4w"
            >
              <b>
                Les informations sur ce médicament font l’objet d’une procédure centralisée au niveau européen.
                <br />
                <br />
                <a
                  aria-description="Lien vers le site de l'EMA"
                  href="https://www.ema.europa.eu/en/search"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Voir les données complètes sur le site de l'EMA (Agence européenne des médicaments).
                </a>
                .
              </b>
            </div>
            <article>
              <div
                class="sc-FEMpB lfcJZZ fr-mb-4w"
              >
                <div
                  class="sc-bCjwNj exnKRS"
                >
                  <div
                    class="sc-iXqmyu eCoJpd fr-mb-4w"
                  >
                    <div
                      style="display: flex;"
                    >
                      <span
                        class="fr-icon--custom-notice fr-mr-1w fr-hidden fr-unhidden-md"
                      />
                      <h2
                        class="fr-h3 fr-mb-1w"
                      >
                        Notice complète
                      </h2>
                    </div>
                    <div
                      class="sc-FEMpB korYns"
                    />
                  </div>
                </div>
              </div>
            </article>
            <a
              class="fr-btn fr-icon-arrow-up-line go-top-button"
              href="#"
              id="fr-button-:r1:"
              title="Haut de page"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Medicament Container component(UI Integration) > should render the correct content for medicament with pediatric 'sur avis d'un médecin' 1`] = `
<div>
  <div
    class="sc-FEMpB korYns  fr-container fr-pt-1w fr-pb-2w"
  >
    <div
      class="fr-grid-row fr-grid-row--gutters"
    >
      <div
        class="sc-gQJZgv caevfI fr-col-12 fr-mt-2w"
      >
        <div
          class="sc-gQJZgv caevfI mobile-display-contents fr-grid-row fr-grid-row--gutters"
        >
          <div
            class="sc-FEMpB korYns mobile-display-contents fr-col-12 fr-col-lg-3 fr-col-md-3"
          >
            <div
              class="sc-eiwqOE bTPPKc"
            >
              <div
                class="fr-share"
              >
                <p
                  class="fr-share__title"
                >
                  Partager via :
                </p>
                <ul
                  class="fr-btns-group"
                >
                  <li>
                    <a
                      class="fr-btn--mail fr-btn"
                      href="mailto:?subject=Atepadene 30 mg, gélule - Info Médicament&body=Voici un lien vers la page Atepadene 30 mg, gélule sur le site Info Médicament : http://localhost:3000/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Partager par email
                    </a>
                  </li>
                  <li>
                    <a
                      class="fr-btn--copy fr-btn"
                      href=""
                    >
                      Copier dans le presse-papier
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="sc-flQbIK gBVMLf fr-mb-4w fr-p-2w"
            >
              <div
                class="fr-toggle fr-toggle--label-left medicament-toggle-switch"
                id="fr-toggle-:re:"
              >
                <input
                  aria-describedby="fr-toggle-:re:-hint-text"
                  class="fr-toggle__input"
                  id="fr-toggle-:re:-input"
                  title="Version détaillée"
                  type="checkbox"
                />
                <label
                  class="fr-toggle__label"
                  for="fr-toggle-:re:-input"
                >
                  Version détaillée
                </label>
                <p
                  class="fr-hint-text"
                  id="fr-toggle-:re:-hint-text"
                >
                  Afficher RCP, données HAS, CNAM...
                </p>
              </div>
            </div>
            <section
              class="mobile-display-contents fr-mb-4w"
            >
              <div
                class="sc-FEMpB lfcJZZ fr-mb-4w fr-p-2w"
              >
                <div>
                  <div
                    class="sc-gjcoXW ChmUM"
                  >
                    Sous-classe
                  </div>
                  <a
                    class="fr-tag--custom-alt-class fr-tag fr-tag--custom-alt-class"
                    href="/atc/M03"
                    id="fr-tag-:rg:"
                    target="_blank"
                  >
                    Décontractants musculaires
                  </a>
                  <hr
                    class="fr-pb-1w fr-mt-1w"
                  />
                </div>
                <div>
                  <div
                    class="sc-gjcoXW ChmUM"
                  >
                    Substance active
                  </div>
                  <a
                    class="fr-tag--custom-alt-substance fr-tag fr-tag--custom-alt-substance"
                    href="/substances/94712"
                    id="fr-tag-:rh:"
                    target="_blank"
                  >
                    adénosine triphosphate disodique
                  </a>
                  <hr
                    class="fr-pb-1w fr-mt-1w"
                  />
                </div>
                <div>
                  <div>
                    <a
                      class="fr-tag--custom-alt-blue fr-tag fr-icon-capsule-fill fr-tag--icon-left fr-tag--custom-alt-blue"
                      href="/generiques/60453083"
                      id="fr-tag-:ri:"
                      target="_blank"
                    >
                      Voir les Princeps
                    </a>
                  </div>
                </div>
                <div>
                  <button
                    aria-controls="pregnancy-subs-modal"
                    aria-hidden="true"
                    class="fr-btn fr-hidden"
                    data-fr-opened="false"
                    id="pregnancy-subs-modal-hidden-control-button"
                    tabindex="-1"
                    type="button"
                  >
                     
                  </button>
                  <dialog
                    aria-labelledby="fr-modal-title-pregnancy-subs-modal"
                    class="fr-modal"
                    data-fr-concealing-backdrop="true"
                    id="pregnancy-subs-modal"
                  >
                    <div
                      class="fr-container fr-container--fluid fr-container-md"
                    >
                      <div
                        class="fr-grid-row fr-grid-row--center"
                      >
                        <div
                          class="fr-col-12 fr-col-md-8 fr-col-lg-6"
                        >
                          <div
                            class="fr-modal__body"
                          >
                            <div
                              class="fr-modal__header"
                            >
                              <button
                                aria-controls="pregnancy-subs-modal"
                                class="fr-btn--close fr-btn"
                                title="Fermer"
                                type="button"
                              >
                                Fermer
                              </button>
                            </div>
                            <div
                              class="fr-modal__content"
                            >
                              <h1
                                class="fr-modal__title"
                                id="fr-modal-title-pregnancy-subs-modal"
                              />
                              <div
                                class="sc-dVBluf gXovgn"
                              >
                                <h4
                                  class="fr-icon--custom-bedroom-baby"
                                >
                                  Utilisation chez l'enfant sur avis d'un professionnel de santé
                                </h4>
                                <span>
                                  Ce tag indique qu’une information spécifique existe concernant l’usage chez l’enfant. Cela peut signifier que le médicament doit être utilisé avec précaution selon l’âge.
                                  <br />
                                  Vérifiez toujours la tranche d’âge concernée dans la notice et demandez conseil à un professionnel de santé.
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </dialog>
                  <div
                    class="fr-mt-1w fr-mr-1w"
                  >
                    <button
                      class="fr-link fr-tag--custom-alt-pediatrics-advice fr-tag fr-tag--custom-alt-pediatrics-advice"
                      id="fr-tag-:rk:"
                    >
                      <span
                        class="fr-icon--custom-bedroom-baby fr-text--sm"
                      />
                      <span
                        class="fr-ml-1w fr-text--sm"
                      >
                        Utilisation chez l'enfant sur avis d'un professionnel de santé
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="sc-FEMpB lfcJZZ fr-mb-4w fr-p-2w"
              >
                <h3
                  class="fr-h6"
                >
                  <span
                    class="fr-hidden-md"
                  >
                    Conditionnement
                  </span>
                  <span
                    class="fr-hidden fr-unhidden-md"
                  >
                    Conditionnement et prix
                  </span>
                </h3>
                <ul
                  class="fr-raw-list"
                >
                  <li
                    class="fr-mb-1w"
                  >
                    <span
                      class="fr-icon--custom-box fr-mr-1w"
                    />
                    <b>
                      Plaquette  de 30 gélules
                    </b>
                    <div>
                      Prix libre - non remboursable
                    </div>
                  </li>
                  <li
                    class="fr-mb-1w"
                  >
                    <span
                      class="fr-icon--custom-box fr-mr-1w"
                    />
                    <b>
                      Tube de 60 gélules
                    </b>
                    <div>
                      Prix libre - non remboursable
                    </div>
                  </li>
                </ul>
              </div>
            </section>
          </div>
          <div
            class="sc-FEMpB korYns mobile-display-contents fr-col-12 fr-col-lg-9 fr-col-md-9"
          >
            <article>
              <div
                class="sc-FEMpB lfcJZZ fr-mb-4w"
              >
                <div
                  class="sc-bCjwNj exnKRS"
                >
                  <div
                    class="sc-iXqmyu eCoJpd fr-mb-4w"
                  >
                    <div
                      style="display: flex;"
                    >
                      <span
                        class="fr-icon--custom-notice fr-mr-1w fr-hidden fr-unhidden-md"
                      />
                      <h2
                        class="fr-h3 fr-mb-1w"
                      >
                        Notice complète
                      </h2>
                    </div>
                    <div
                      class="sc-FEMpB korYns"
                    />
                  </div>
                </div>
              </div>
            </article>
            <a
              class="fr-btn fr-icon-arrow-up-line go-top-button"
              href="#"
              id="fr-button-:rf:"
              title="Haut de page"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Medicament Container component(UI Integration) > should render the correct content for medicament with pediatric contre-indication 1`] = `
<div>
  <div
    class="sc-FEMpB korYns  fr-container fr-pt-1w fr-pb-2w"
  >
    <div
      class="fr-grid-row fr-grid-row--gutters"
    >
      <div
        class="sc-FEMpB korYns fr-col-12"
      >
        <div
          class="sc-FEMpB lfcJZZ"
        >
          <div
            class="fr-alert fr-alert--warning"
            id="fr-alert-:rs:"
          >
            <h3
              class="fr-alert__title"
            >
              Il existe une contre-indication pédiatrique (vérifier selon l’âge).
            </h3>
            <div />
          </div>
        </div>
      </div>
      <div
        class="sc-gQJZgv caevfI fr-col-12 fr-mt-2w"
      >
        <div
          class="sc-gQJZgv caevfI mobile-display-contents fr-grid-row fr-grid-row--gutters"
        >
          <div
            class="sc-FEMpB korYns mobile-display-contents fr-col-12 fr-col-lg-3 fr-col-md-3"
          >
            <div
              class="sc-eiwqOE bTPPKc"
            >
              <div
                class="fr-share"
              >
                <p
                  class="fr-share__title"
                >
                  Partager via :
                </p>
                <ul
                  class="fr-btns-group"
                >
                  <li>
                    <a
                      class="fr-btn--mail fr-btn"
                      href="mailto:?subject=Bactrim, suspension buvable - Info Médicament&body=Voici un lien vers la page Bactrim, suspension buvable sur le site Info Médicament : http://localhost:3000/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Partager par email
                    </a>
                  </li>
                  <li>
                    <a
                      class="fr-btn--copy fr-btn"
                      href=""
                    >
                      Copier dans le presse-papier
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="sc-flQbIK gBVMLf fr-mb-4w fr-p-2w"
            >
              <div
                class="fr-toggle fr-toggle--label-left medicament-toggle-switch"
                id="fr-toggle-:rl:"
              >
                <input
                  aria-describedby="fr-toggle-:rl:-hint-text"
                  class="fr-toggle__input"
                  id="fr-toggle-:rl:-input"
                  title="Version détaillée"
                  type="checkbox"
                />
                <label
                  class="fr-toggle__label"
                  for="fr-toggle-:rl:-input"
                >
                  Version détaillée
                </label>
                <p
                  class="fr-hint-text"
                  id="fr-toggle-:rl:-hint-text"
                >
                  Afficher RCP, données HAS, CNAM...
                </p>
              </div>
            </div>
            <section
              class="mobile-display-contents fr-mb-4w"
            >
              <div
                class="sc-FEMpB lfcJZZ fr-mb-4w fr-p-2w"
              >
                <div>
                  <div
                    class="sc-gjcoXW ChmUM"
                  >
                    Sous-classe
                  </div>
                  <a
                    class="fr-tag--custom-alt-class fr-tag fr-tag--custom-alt-class"
                    href="/atc/J01"
                    id="fr-tag-:ro:"
                    target="_blank"
                  >
                    Antibiotiques
                  </a>
                  <hr
                    class="fr-pb-1w fr-mt-1w"
                  />
                </div>
                <div>
                  <div
                    class="sc-gjcoXW ChmUM"
                  >
                    Substance active
                  </div>
                  <a
                    class="fr-tag--custom-alt-substance fr-tag fr-tag--custom-alt-substance"
                    href="/substances/02878,00342"
                    id="fr-tag-:rp:"
                    target="_blank"
                  >
                    sulfaméthoxazole, triméthoprime
                  </a>
                  <hr
                    class="fr-pb-1w fr-mt-1w"
                  />
                </div>
                <div>
                  <div>
                    <a
                      class="fr-tag--custom-alt-blue fr-tag fr-icon-capsule-fill fr-tag--icon-left fr-tag--custom-alt-blue"
                      href="/generiques/65880598"
                      id="fr-tag-:rr:"
                      target="_blank"
                    >
                      Voir les Princeps
                    </a>
                  </div>
                  <hr
                    class="fr-pb-1w fr-mt-1w"
                  />
                </div>
                <div>
                  <button
                    class="fr-tag--custom-alt-blue fr-tag fr-icon-file-text-fill fr-tag--icon-left"
                    id="fr-tag-:rq:"
                  >
                    Sur ordonnance
                  </button>
                </div>
                <div>
                  <button
                    aria-controls="pregnancy-subs-modal"
                    aria-hidden="true"
                    class="fr-btn fr-hidden"
                    data-fr-opened="false"
                    id="pregnancy-subs-modal-hidden-control-button"
                    tabindex="-1"
                    type="button"
                  >
                     
                  </button>
                  <dialog
                    aria-labelledby="fr-modal-title-pregnancy-subs-modal"
                    class="fr-modal"
                    data-fr-concealing-backdrop="true"
                    id="pregnancy-subs-modal"
                  >
                    <div
                      class="fr-container fr-container--fluid fr-container-md"
                    >
                      <div
                        class="fr-grid-row fr-grid-row--center"
                      >
                        <div
                          class="fr-col-12 fr-col-md-8 fr-col-lg-6"
                        >
                          <div
                            class="fr-modal__body"
                          >
                            <div
                              class="fr-modal__header"
                            >
                              <button
                                aria-controls="pregnancy-subs-modal"
                                class="fr-btn--close fr-btn"
                                title="Fermer"
                                type="button"
                              >
                                Fermer
                              </button>
                            </div>
                            <div
                              class="fr-modal__content"
                            >
                              <h1
                                class="fr-modal__title"
                                id="fr-modal-title-pregnancy-subs-modal"
                              />
                              <div
                                class="sc-dVBluf gXovgn"
                              >
                                <h4
                                  class="fr-icon--custom-bedroom-baby"
                                >
                                  Peut être utilisé chez l'enfant selon l'âge
                                </h4>
                                <span>
                                  Ce tag indique qu’une information spécifique existe concernant l’usage chez l’enfant. Cela peut signifier que le médicament est contre-indiqué selon l’âge.
                                  <br />
                                  Vérifiez toujours la tranche d’âge concernée dans la notice et demandez conseil à un professionnel de santé.
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </dialog>
                  <div
                    class="fr-mt-1w fr-mr-1w"
                  >
                    <button
                      class="fr-link fr-tag--custom-alt-pediatrics-indication fr-tag fr-tag--custom-alt-pediatrics-indication"
                      id="fr-tag-:r10:"
                    >
                      <span
                        class="fr-icon--custom-bedroom-baby fr-text--sm"
                      />
                      <span
                        class="fr-ml-1w fr-text--sm"
                      >
                        Peut être utilisé chez l'enfant selon l'âge
                      </span>
                    </button>
                    <hr
                      class="fr-pb-1w fr-mt-1w"
                    />
                  </div>
                </div>
                <div>
                  <button
                    aria-controls="pregnancy-subs-modal"
                    aria-hidden="true"
                    class="fr-btn fr-hidden"
                    data-fr-opened="false"
                    id="pregnancy-subs-modal-hidden-control-button"
                    tabindex="-1"
                    type="button"
                  >
                     
                  </button>
                  <dialog
                    aria-labelledby="fr-modal-title-pregnancy-subs-modal"
                    class="fr-modal"
                    data-fr-concealing-backdrop="true"
                    id="pregnancy-subs-modal"
                  >
                    <div
                      class="fr-container fr-container--fluid fr-container-md"
                    >
                      <div
                        class="fr-grid-row fr-grid-row--center"
                      >
                        <div
                          class="fr-col-12 fr-col-md-8 fr-col-lg-6"
                        >
                          <div
                            class="fr-modal__body"
                          >
                            <div
                              class="fr-modal__header"
                            >
                              <button
                                aria-controls="pregnancy-subs-modal"
                                class="fr-btn--close fr-btn"
                                title="Fermer"
                                type="button"
                              >
                                Fermer
                              </button>
                            </div>
                            <div
                              class="fr-modal__content"
                            >
                              <h1
                                class="fr-modal__title"
                                id="fr-modal-title-pregnancy-subs-modal"
                              />
                              <div
                                class="sc-dVBluf gXovgn"
                              >
                                <h4
                                  class="fr-icon--custom-bedroom-baby"
                                >
                                  Contre-indication chez l'enfant selon l'âge
                                </h4>
                                <span>
                                  Ce tag indique qu’une information spécifique existe concernant l’usage chez l’enfant. Cela peut signifier que le médicament est autorisé selon l’âge.
                                  <br />
                                  Vérifiez toujours la tranche d’âge concernée dans la notice et demandez conseil à un professionnel de santé.
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </dialog>
                  <div
                    class="fr-mt-1w fr-mr-1w"
                  >
                    <button
                      class="fr-link fr-tag--custom-alt-contraindication fr-tag fr-tag--custom-alt-contraindication"
                      id="fr-tag-:r11:"
                    >
                      <span
                        class="fr-icon--custom-bedroom-baby fr-text--sm"
                      />
                      <span
                        class="fr-ml-1w fr-text--sm"
                      >
                        Contre-indication chez l'enfant selon l'âge
                      </span>
                    </button>
                    <hr
                      class="fr-pb-1w fr-mt-1w"
                    />
                  </div>
                </div>
                <div>
                  <button
                    aria-controls="pregnancy-subs-modal"
                    aria-hidden="true"
                    class="fr-btn fr-hidden"
                    data-fr-opened="false"
                    id="pregnancy-subs-modal-hidden-control-button"
                    tabindex="-1"
                    type="button"
                  >
                     
                  </button>
                  <dialog
                    aria-labelledby="fr-modal-title-pregnancy-subs-modal"
                    class="fr-modal"
                    data-fr-concealing-backdrop="true"
                    id="pregnancy-subs-modal"
                  >
                    <div
                      class="fr-container fr-container--fluid fr-container-md"
                    >
                      <div
                        class="fr-grid-row fr-grid-row--center"
                      >
                        <div
                          class="fr-col-12 fr-col-md-8 fr-col-lg-6"
                        >
                          <div
                            class="fr-modal__body"
                          >
                            <div
                              class="fr-modal__header"
                            >
                              <button
                                aria-controls="pregnancy-subs-modal"
                                class="fr-btn--close fr-btn"
                                title="Fermer"
                                type="button"
                              >
                                Fermer
                              </button>
                            </div>
                            <div
                              class="fr-modal__content"
                            >
                              <h1
                                class="fr-modal__title"
                                id="fr-modal-title-pregnancy-subs-modal"
                              />
                              <div
                                class="sc-dVBluf gXovgn"
                              >
                                <h4
                                  class="fr-icon--custom-bedroom-baby"
                                >
                                  Mention contre-indication enfant
                                </h4>
                                <span>
                                  Ce tag indique que ce médicament peut présenter des précautions d’usage pour les enfants et adolescents (moins de 18 ans). Il peut être autorisé, déconseillé ou contre-indiqué selon les cas.
                                  <br />
                                  Lisez la notice et demandez l’avis d’un professionnel de santé avant toute prise.
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </dialog>
                  <div
                    class="fr-mt-1w fr-mr-1w"
                  >
                    <button
                      class="fr-link fr-tag--custom-alt-pediatrics-indication fr-tag fr-tag--custom-alt-pediatrics-indication"
                      id="fr-tag-:r12:"
                    >
                      <span
                        class="fr-icon--custom-bedroom-baby fr-text--sm"
                      />
                      <span
                        class="fr-ml-1w fr-text--sm"
                      >
                        Mention contre-indication enfant
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="sc-FEMpB lfcJZZ fr-mb-4w fr-p-2w"
              >
                <h3
                  class="fr-h6"
                >
                  <span
                    class="fr-hidden-md"
                  >
                    Conditionnement
                  </span>
                  <span
                    class="fr-hidden fr-unhidden-md"
                  >
                    Conditionnement et prix
                  </span>
                </h3>
                <span>
                  Pas de conditionnement à afficher
                </span>
              </div>
            </section>
          </div>
          <div
            class="sc-FEMpB korYns mobile-display-contents fr-col-12 fr-col-lg-9 fr-col-md-9"
          >
            <div
              class="sc-FEMpB lfcJZZ fr-mb-4w"
            >
              <div
                class="fr-alert fr-alert--info fr-alert--sm"
                id="fr-alert-:rn:"
              >
                <h3
                  class="fr-alert__title"
                >
                  Ce médicament n'est ou ne sera bientôt plus disponible sur le marché.
                </h3>
                <p>
                  Si vous prenez actuellement ce médicament, il vous est recommandé d'en parler avec votre médecin ou avec votre pharmacien qui pourra vous orienter vers un autre traitement.
                </p>
              </div>
            </div>
            <article>
              <div
                class="sc-FEMpB lfcJZZ fr-mb-4w"
              >
                <div
                  class="sc-bCjwNj exnKRS"
                >
                  <div
                    class="sc-iXqmyu eCoJpd fr-mb-4w"
                  >
                    <div
                      style="display: flex;"
                    >
                      <span
                        class="fr-icon--custom-notice fr-mr-1w fr-hidden fr-unhidden-md"
                      />
                      <h2
                        class="fr-h3 fr-mb-1w"
                      >
                        Notice complète
                      </h2>
                    </div>
                    <div
                      class="sc-FEMpB korYns"
                    />
                  </div>
                </div>
              </div>
            </article>
            <a
              class="fr-btn fr-icon-arrow-up-line go-top-button"
              href="#"
              id="fr-button-:rm:"
              title="Haut de page"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Medicament Container component(UI Integration) > should render the correct content for medicament with pediatric indication 1`] = `
<div>
  <div
    class="sc-FEMpB korYns  fr-container fr-pt-1w fr-pb-2w"
  >
    <div
      class="fr-grid-row fr-grid-row--gutters"
    >
      <div
        class="sc-gQJZgv caevfI fr-col-12 fr-mt-2w"
      >
        <div
          class="sc-gQJZgv caevfI mobile-display-contents fr-grid-row fr-grid-row--gutters"
        >
          <div
            class="sc-FEMpB korYns mobile-display-contents fr-col-12 fr-col-lg-3 fr-col-md-3"
          >
            <div
              class="sc-eiwqOE bTPPKc"
            >
              <div
                class="fr-share"
              >
                <p
                  class="fr-share__title"
                >
                  Partager via :
                </p>
                <ul
                  class="fr-btns-group"
                >
                  <li>
                    <a
                      class="fr-btn--mail fr-btn"
                      href="mailto:?subject=Augmentin 1 g/125 mg, poudre pour suspension buvable en sachet-dose (rapport amoxicilline/acide clavulanique : 8/1) - Info Médicament&body=Voici un lien vers la page Augmentin 1 g/125 mg, poudre pour suspension buvable en sachet-dose (rapport amoxicilline/acide clavulanique : 8/1) sur le site Info Médicament : http://localhost:3000/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Partager par email
                    </a>
                  </li>
                  <li>
                    <a
                      class="fr-btn--copy fr-btn"
                      href=""
                    >
                      Copier dans le presse-papier
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="sc-flQbIK gBVMLf fr-mb-4w fr-p-2w"
            >
              <div
                class="fr-toggle fr-toggle--label-left medicament-toggle-switch"
                id="fr-toggle-:r6:"
              >
                <input
                  aria-describedby="fr-toggle-:r6:-hint-text"
                  class="fr-toggle__input"
                  id="fr-toggle-:r6:-input"
                  title="Version détaillée"
                  type="checkbox"
                />
                <label
                  class="fr-toggle__label"
                  for="fr-toggle-:r6:-input"
                >
                  Version détaillée
                </label>
                <p
                  class="fr-hint-text"
                  id="fr-toggle-:r6:-hint-text"
                >
                  Afficher RCP, données HAS, CNAM...
                </p>
              </div>
            </div>
            <section
              class="mobile-display-contents fr-mb-4w"
            >
              <div
                class="sc-FEMpB lfcJZZ fr-mb-4w fr-p-2w"
              >
                <div>
                  <div
                    class="sc-gjcoXW ChmUM"
                  >
                    Sous-classe
                  </div>
                  <a
                    class="fr-tag--custom-alt-class fr-tag fr-tag--custom-alt-class"
                    href="/atc/J01"
                    id="fr-tag-:r8:"
                    target="_blank"
                  >
                    Antibiotiques
                  </a>
                  <hr
                    class="fr-pb-1w fr-mt-1w"
                  />
                </div>
                <div>
                  <div
                    class="sc-gjcoXW ChmUM"
                  >
                    Substance active
                  </div>
                  <a
                    class="fr-tag--custom-alt-substance fr-tag fr-tag--custom-alt-substance"
                    href="/substances/93286,05248"
                    id="fr-tag-:r9:"
                    target="_blank"
                  >
                    acide clavulanique, amoxicilline anhydre
                  </a>
                  <hr
                    class="fr-pb-1w fr-mt-1w"
                  />
                </div>
                <div>
                  <div>
                    <a
                      class="fr-tag--custom-alt-blue fr-tag fr-icon-capsule-fill fr-tag--icon-left fr-tag--custom-alt-blue"
                      href="/generiques/66053338"
                      id="fr-tag-:rb:"
                      target="_blank"
                    >
                      Voir les Princeps
                    </a>
                  </div>
                  <hr
                    class="fr-pb-1w fr-mt-1w"
                  />
                </div>
                <div>
                  <button
                    class="fr-tag--custom-alt-blue fr-tag fr-icon-file-text-fill fr-tag--icon-left"
                    id="fr-tag-:ra:"
                  >
                    Sur ordonnance
                  </button>
                </div>
                <div>
                  <button
                    aria-controls="pregnancy-subs-modal"
                    aria-hidden="true"
                    class="fr-btn fr-hidden"
                    data-fr-opened="false"
                    id="pregnancy-subs-modal-hidden-control-button"
                    tabindex="-1"
                    type="button"
                  >
                     
                  </button>
                  <dialog
                    aria-labelledby="fr-modal-title-pregnancy-subs-modal"
                    class="fr-modal"
                    data-fr-concealing-backdrop="true"
                    id="pregnancy-subs-modal"
                  >
                    <div
                      class="fr-container fr-container--fluid fr-container-md"
                    >
                      <div
                        class="fr-grid-row fr-grid-row--center"
                      >
                        <div
                          class="fr-col-12 fr-col-md-8 fr-col-lg-6"
                        >
                          <div
                            class="fr-modal__body"
                          >
                            <div
                              class="fr-modal__header"
                            >
                              <button
                                aria-controls="pregnancy-subs-modal"
                                class="fr-btn--close fr-btn"
                                title="Fermer"
                                type="button"
                              >
                                Fermer
                              </button>
                            </div>
                            <div
                              class="fr-modal__content"
                            >
                              <h1
                                class="fr-modal__title"
                                id="fr-modal-title-pregnancy-subs-modal"
                              />
                              <div
                                class="sc-dVBluf gXovgn"
                              >
                                <h4
                                  class="fr-icon--custom-bedroom-baby"
                                >
                                  Peut être utilisé chez l'enfant selon l'âge
                                </h4>
                                <span>
                                  Ce tag indique qu’une information spécifique existe concernant l’usage chez l’enfant. Cela peut signifier que le médicament est contre-indiqué selon l’âge.
                                  <br />
                                  Vérifiez toujours la tranche d’âge concernée dans la notice et demandez conseil à un professionnel de santé.
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </dialog>
                  <div
                    class="fr-mt-1w fr-mr-1w"
                  >
                    <button
                      class="fr-link fr-tag--custom-alt-pediatrics-indication fr-tag fr-tag--custom-alt-pediatrics-indication"
                      id="fr-tag-:rd:"
                    >
                      <span
                        class="fr-icon--custom-bedroom-baby fr-text--sm"
                      />
                      <span
                        class="fr-ml-1w fr-text--sm"
                      >
                        Peut être utilisé chez l'enfant selon l'âge
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="sc-FEMpB lfcJZZ fr-mb-4w fr-p-2w"
              >
                <h3
                  class="fr-h6"
                >
                  <span
                    class="fr-hidden-md"
                  >
                    Conditionnement
                  </span>
                  <span
                    class="fr-hidden fr-unhidden-md"
                  >
                    Conditionnement et prix
                  </span>
                </h3>
                <ul
                  class="fr-raw-list"
                >
                  <li
                    class="fr-mb-1w"
                  >
                    <span
                      class="fr-icon--custom-box fr-mr-1w"
                    />
                    <b>
                      8 sachets-doses de 1 g
                    </b>
                    <div>
                      Prix
                       
                      6,64 €
                       
                      - remboursé à 
                      65%
                    </div>
                  </li>
                  <li
                    class="fr-mb-1w"
                  >
                    <span
                      class="fr-icon--custom-box fr-mr-1w"
                    />
                    <b>
                      12 sachets-doses de 1 g
                    </b>
                    <div>
                      Prix
                       
                      8,10 €
                       
                      - remboursé à 
                      65%
                    </div>
                  </li>
                </ul>
              </div>
            </section>
          </div>
          <div
            class="sc-FEMpB korYns mobile-display-contents fr-col-12 fr-col-lg-9 fr-col-md-9"
          >
            <article>
              <div
                class="sc-FEMpB lfcJZZ fr-mb-4w"
              >
                <div
                  class="sc-bCjwNj exnKRS"
                >
                  <div
                    class="sc-iXqmyu eCoJpd fr-mb-4w"
                  >
                    <div
                      style="display: flex;"
                    >
                      <span
                        class="fr-icon--custom-notice fr-mr-1w fr-hidden fr-unhidden-md"
                      />
                      <h2
                        class="fr-h3 fr-mb-1w"
                      >
                        Notice complète
                      </h2>
                    </div>
                    <div
                      class="sc-FEMpB korYns"
                    />
                  </div>
                </div>
              </div>
            </article>
            <a
              class="fr-btn fr-icon-arrow-up-line go-top-button"
              href="#"
              id="fr-button-:r7:"
              title="Haut de page"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
